--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "onchaindata"
-version = "0.1.0"
-description = ""
+version = "0.0.1"
+description = "Toolkit for extracting, loading onchain data"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -24,7 +24,7 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-onchaindata = { path = "./src/onchaindata" }
+onchaindata = { path = "./src" }
 
 [tool.uv]
 package = true
